<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/barcode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:hint="@string/enter_barcode"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/count_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:hint="@string/count"
                    android:gravity="center"/>

                <NumberPicker
                    android:id="@+id/count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal">

            <Button
                android:id="@+id/scan_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/scan_item" />
            <Button
                android:id="@+id/add_product_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/add_item"
                android:onClick="addItems"/>
            </LinearLayout>

            <ListView
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.49"
                    android:gravity="center"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/black"
                    android:text="@string/done" />

                <Button
                    android:id="@+id/report_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.49"
                    android:gravity="center"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/white"
                    android:text="@string/report" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" >
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" >
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>